--- a/dis1/build.gradle
+++ b/dis1/build.gradle
@@ -1,19 +1,21 @@
 plugins {
-    id 'java'
+    id 'application'
 }
 
 group 'ru.nsu.ccfit.beloglazov.dis'
 version '1.0-SNAPSHOT'
+
+application {
+    mainClass = 'ru.nsu.ccfit.beloglazov.dis.dis1.Main'
+}
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
-}
-
-test {
-    useJUnitPlatform()
+    implementation 'org.slf4j:slf4j-api:1.7.36'
+    implementation 'log4j:log4j:1.2.17'
+    implementation 'org.apache.commons:commons-compress:1.21'
+    implementation 'commons-cli:commons-cli:1.5.0'
 }
