--- a/dis2/build.gradle
+++ b/dis2/build.gradle
@@ -1,5 +1,10 @@
 plugins {
     id 'application'
+    id "com.intershop.gradle.jaxb" version "4.4.1"
+}
+
+configurations {
+    jaxbext
 }
 
 group 'ru.nsu.ccfit.beloglazov.dis'
@@ -18,4 +23,20 @@ dependencies {
     implementation 'log4j:log4j:1.2.17'
     implementation 'org.apache.commons:commons-compress:1.21'
     implementation 'commons-cli:commons-cli:1.5.0'
+    implementation 'org.postgresql:postgresql:42.3.3'
+    jaxb "org.glassfish.jaxb:jaxb-runtime:2.3.2"
+    jaxb "com.sun.xml.bind:jaxb-jxc:2.2.11"
+    jaxb "com.sun.xml.bind:jaxb-xjc:2.2.11"
+    jaxb "com.sun.xml.bind:jaxb-core:2.2.11"
+    jaxbext 'jakarta.xml.bind:jakarta.xml.bind-api:2.3.3'
+}
+
+jaxb {
+    javaGen {
+        name {
+            packageName = 'ru.nsu.ccfit.beloglazov.dis.dis2.generated'
+            outputDir = file('./src/main/java')
+            schema = file('./src/main/resources/schema.xsd')
+        }
+    }
 }
