--- a/dis3/build.gradle
+++ b/dis3/build.gradle
@@ -1,4 +1,18 @@
+buildscript {
+    ext {
+        springBootVersion = '2.4.5'
+    }
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+    }
+}
+
 plugins {
+    id 'org.springframework.boot' version '2.4.5'
+    id "io.freefair.lombok" version "6.4.1"
     id 'application'
     id "com.intershop.gradle.jaxb" version "4.4.1"
 }
@@ -19,6 +33,10 @@ repositories {
 }
 
 dependencies {
+    implementation platform('org.springframework.boot:spring-boot-dependencies:2.4.5')
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.slf4j:slf4j-api:1.7.36'
     implementation 'log4j:log4j:1.2.17'
     implementation 'org.apache.commons:commons-compress:1.21'
